implement base UserController, add UserDto, add Exception, add validation