@@ -1,25 +1,69 @@
 package com.softserve.itacademy.todolist.controller;
 
+import com.softserve.itacademy.todolist.dto.UserDto;
 import com.softserve.itacademy.todolist.dto.UserResponse;
+import com.softserve.itacademy.todolist.dto.UserTransformer;
+import com.softserve.itacademy.todolist.model.User;
+import com.softserve.itacademy.todolist.service.RoleService;
 import com.softserve.itacademy.todolist.service.UserService;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.web.bind.annotation.*;
 
+import javax.persistence.EntityNotFoundException;
+import javax.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
 @RestController
 @RequestMapping("/api/users")
 public class UserController {
+
+    private final UserService userService;
+    private final UserTransformer userTransformer;
+
     @Autowired
-    UserService userService;
+    public UserController(UserService userService, UserTransformer userTransformer) {
+        this.userService = userService;
+        this.userTransformer = userTransformer;
+    }
 
     @GetMapping
-    List<UserResponse> getAll() {
-        return userService.getAll().stream()
+    public ResponseEntity<List<UserResponse>> getAll() {
+        List<UserResponse> users =  userService.getAll().stream()
                 .map(UserResponse::new)
-                .collect(Collectors.toList());
+                .toList();
+        return new ResponseEntity<>(users, HttpStatus.OK);
     }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<UserResponse> getUserById(@PathVariable Long id) {
+        UserResponse userResponse =  new UserResponse(userService.readById(id));
+        return new ResponseEntity<>(userResponse, HttpStatus.OK);
+    }
+
+    @PostMapping
+    public ResponseEntity<UserResponse> createNewUser (@Valid @RequestBody UserDto userDto) {
+        User user = userService.create(userTransformer.convertUserDtoToUser(userDto, null));
+        UserResponse userResponse = new UserResponse(user);
+        return new ResponseEntity<>(userResponse, HttpStatus.CREATED);
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<UserResponse> updateUser (@PathVariable Long id, @Valid @RequestBody UserDto userDto) {
+        User updatedUser = userService.readById(id);
+        updatedUser = userTransformer.convertUserDtoToUser(userDto, updatedUser);
+        User user = userService.update(updatedUser);
+        UserResponse userResponse = new UserResponse(user);
+        return new ResponseEntity<>(userResponse, HttpStatus.OK);
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<String> deleteUser(@PathVariable Long id) {
+        userService.delete(id);
+        return new ResponseEntity<>("OK", HttpStatus.OK);
+    }
+
 }
